--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             </p>
     
             <p>
-                <input type="checkbox" name="agree" checked required>
-                <label for="agree">Я погоджуюсь з обробкою персональних даних</label>
+                <label><input type="checkbox" name="agree" value="true">Я погоджуюсь з обробкою персональних даних</label>
             </p>
     
             <button type="submit">Зареєструватись</button>
